# CW1-PowerToThePeople

./: .gitignore  Power.hs  PowerToThePeople.cabal  README.md
test/: PowerTest.hs
